# agent-lifecycle-harness

./: .gitignore  EVIDENCE_R3.md  README.md  WORK_ORDER_R3_hardening.md  pyproject.toml
scripts/: gen_a2_fixture.py
src/agent_lifecycle_harness/: __init__.py  agent.py  compaction.py  config.py  debug_log.py  degradation.py  hotreload.py  llm.py  migration.py  openai_agents_harness.py  provenance.py  run.py  tombstone.py
src/agent_lifecycle_harness/demos/: __init__.py  a1_isolation.py  a2_acceptance.py  a2_compaction.py  a2a3_interop.py  a3_tombstone.py  a4_hotreload.py  a5_degradation.py  a6_migration.py  a7_cross_framework.py
tests/: conftest.py  test_a1.py  test_a2.py  test_a2a3_interop.py  test_a3.py  test_a4.py  test_a5.py  test_a6.py  test_a7.py
tests/fixtures/: a2_conversation_40turns.json
